force-app/main/default/objects/PDRI__Deployment_Data_Set_Result__c/fields/PDRI__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Deployment Data Set Results</relationshipLabel>
    <relationshipName>Deployment_Data_Set_Results</relationshipName>
    <type>Lookup</type>
</CustomField>