force-app/main/default/objects/PDRI__Deployment_Data_Set_Result__c/fields/PDRI__Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Result__c</fullName>
    <label>Deployment Result</label>
    <referenceTo>PDRI__Deployment_Result__c</referenceTo>
    <relationshipLabel>Deployment Data Set Results</relationshipLabel>
    <relationshipName>Deployment_Data_Set_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>