force-app/main/default/objects/PDRI__Deployment_Data_Set_Result__c/fields/PDRI__Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Total_Records_Processed__c</fullName>
    <label>Total Records Processed</label>
    <summarizedField>PDRI__Deployment_Batch_Result__c.PDRI__Data_Records_Processed__c</summarizedField>
    <summaryForeignKey>PDRI__Deployment_Batch_Result__c.PDRI__Deployment_Data_Set_Result__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>